apps/ndoejstest3/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ndoejstest3
  namespace: dev
  labels:
    backstage.io/kubernetes-id: ndoejstest3
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ndoejstest3-dev
            pathType: Prefix
            backend:
              service:
                name: ndoejstest3
                port:
                  number: 80
